# reflect-cpp

./: CMakeLists.txt  revealCppConfig.cmake.in
benchmark/: CMakeLists.txt  gbenchmark_main.cpp  serialization.cpp
include/reflect/: primitives.hpp  reflect.hpp  reflect_type.hpp  tag.hpp  version.hpp
include/reflect/serialize/: print_names.hpp  read_binary.hpp  simple_binary_reader.hpp  simple_binary_writer.hpp  write_binary.hpp
include/reflect/std/: vector.hpp
include/reflect/traits/: function_traits.hpp
include/reveal/: null_visitor.hpp  primitives.hpp  reflect.hpp  reflect_event_visitor.hpp  reflect_type.hpp  reflection_type.hpp  tag.hpp  version.hpp
include/reveal/serialize/: build_tuple.hpp  json_reader.hpp  json_writer.hpp  print_names.hpp  simple_binary_reader.hpp  simple_binary_writer.hpp
include/reveal/std/: map.hpp  pair.hpp  string.hpp  vector.hpp
include/reveal/traits/: function_traits.hpp  reflection_traits.hpp
include/reveal/utility/: base64.hpp
test/: CMakeLists.txt  build_tuple.cpp  gtest_main.cpp  json.cpp  main.cpp  operators.cpp  print_names.cpp  print_types.cpp  simple_binary_reader_writer.cpp  test_container_types.hpp  test_primitive_types.hpp  test_user_types.hpp
